--- a/site-templates/albertschweitzerschule/css/albertschweitzer.css
+++ b/site-templates/albertschweitzerschule/css/albertschweitzer.css
@@ -87,16 +87,17 @@
 		color: #342B22;
 		-webkit-font-smoothing: antialiased !important;
 		height:80%;
+		font-size: 16px;
 	}
 	
 	h1 { font-size:26px; color:#2E2B2B; font-family: 'SanchezCondensed', sans-serif;}
 	h2 { font-size:22px; color:#806A54;}
 	h3 { font-size:20px; color:#000; font-family: 'Corda-Light', sans-serif;}
 	h4 { font-size:18px; color:#4D341B;}
-	h5 { font-size:17px; color:#80572E; font-family: 'Corda-Light', sans-serif;}
+	h5 { font-size:17px; color:#333332; font-family: 'Corda-Light', sans-serif;}
 	h6 { font-size:16px; }
 
-	p { line-height: 24px; }
+	p { line-height: 1.6; }
 
 	ul, ol { line-height: 24px; }
 
@@ -107,6 +108,8 @@
 	tr:nth-child(odd) { background-color: #F1F1F1; }
 	tr:nth-child(even) { background-color:#FFF;}
 
+	hr { margin:50px 0 30px 0; border-top:1px solid #ededed; border-bottom:none; }
+
 	.brandname {
 		font-family: 'AlexBrushRegular';
 		font-weight:100;
@@ -115,6 +118,7 @@
 	
 	.navbar {
 		margin-bottom:0;
+		font-size:14px;
 	}
 	
 	.header {
