--- a/site-templates/albertschweitzerschule/css/buttons.css
+++ b/site-templates/albertschweitzerschule/css/buttons.css
@@ -1,19 +1,16 @@
 @-webkit-keyframes glowing {
-  /* line 8, ../scss/_glow.scss */
   from {
     -webkit-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
   }
 
-  /* line 9, ../scss/_glow.scss */
   50% {
     -webkit-box-shadow: 0px 0px 16px rgba(44, 154, 219, 0.8), 0px 1px 2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 16px rgba(44, 154, 219, 0.8), 0px 1px 2px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 0px 16px rgba(44, 154, 219, 0.8), 0px 1px 2px rgba(0, 0, 0, 0.2);
   }
 
-  /* line 10, ../scss/_glow.scss */
   to {
     -webkit-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
@@ -22,21 +19,18 @@
 }
 
 @-khtml-keyframes glowing {
-  /* line 14, ../scss/_glow.scss */
   from {
     -webkit-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
   }
 
-  /* line 15, ../scss/_glow.scss */
   50% {
     -webkit-box-shadow: 0px 0px 16px rgba(44, 154, 219, 0.8), 0px 1px 2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 16px rgba(44, 154, 219, 0.8), 0px 1px 2px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 0px 16px rgba(44, 154, 219, 0.8), 0px 1px 2px rgba(0, 0, 0, 0.2);
   }
 
-  /* line 16, ../scss/_glow.scss */
   to {
     -webkit-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
@@ -45,21 +39,18 @@
 }
 
 @-moz-keyframes glowing {
-  /* line 20, ../scss/_glow.scss */
   from {
     -webkit-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
   }
 
-  /* line 21, ../scss/_glow.scss */
   50% {
     -webkit-box-shadow: 0px 0px 16px rgba(44, 154, 219, 0.8), 0px 1px 2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 16px rgba(44, 154, 219, 0.8), 0px 1px 2px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 0px 16px rgba(44, 154, 219, 0.8), 0px 1px 2px rgba(0, 0, 0, 0.2);
   }
 
-  /* line 22, ../scss/_glow.scss */
   to {
     -webkit-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
@@ -68,21 +59,18 @@
 }
 
 @-ms-keyframes glowing {
-  /* line 26, ../scss/_glow.scss */
   from {
     -webkit-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
   }
 
-  /* line 27, ../scss/_glow.scss */
   50% {
     -webkit-box-shadow: 0px 0px 16px rgba(44, 154, 219, 0.8), 0px 1px 2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 16px rgba(44, 154, 219, 0.8), 0px 1px 2px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 0px 16px rgba(44, 154, 219, 0.8), 0px 1px 2px rgba(0, 0, 0, 0.2);
   }
 
-  /* line 28, ../scss/_glow.scss */
   to {
     -webkit-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
@@ -91,21 +79,18 @@
 }
 
 @-o-keyframes glowing {
-  /* line 32, ../scss/_glow.scss */
   from {
     -webkit-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
   }
 
-  /* line 33, ../scss/_glow.scss */
   50% {
     -webkit-box-shadow: 0px 0px 16px rgba(44, 154, 219, 0.8), 0px 1px 2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 16px rgba(44, 154, 219, 0.8), 0px 1px 2px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 0px 16px rgba(44, 154, 219, 0.8), 0px 1px 2px rgba(0, 0, 0, 0.2);
   }
 
-  /* line 34, ../scss/_glow.scss */
   to {
     -webkit-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
@@ -114,21 +99,18 @@
 }
 
 @keyframes glowing {
-  /* line 38, ../scss/_glow.scss */
   from {
     -webkit-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
   }
 
-  /* line 39, ../scss/_glow.scss */
   50% {
     -webkit-box-shadow: 0px 0px 16px rgba(44, 154, 219, 0.8), 0px 1px 2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 16px rgba(44, 154, 219, 0.8), 0px 1px 2px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 0px 16px rgba(44, 154, 219, 0.8), 0px 1px 2px rgba(0, 0, 0, 0.2);
   }
 
-  /* line 40, ../scss/_glow.scss */
   to {
     -webkit-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 0px rgba(44, 154, 219, 0.3), 0px 1px 2px rgba(0, 0, 0, 0.2);
@@ -136,14 +118,14 @@
   }
 }
 
-/* line 10, ../scss/buttons.scss */
-.button {
+
+.btton {
   -webkit-box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.5), 0px 1px 2px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.5), 0px 1px 2px rgba(0, 0, 0, 0.2);
   box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.5), 0px 1px 2px rgba(0, 0, 0, 0.2);
   background-color: #eeeeee;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #fbfbfb), color-stop(100%, #e1e1e1));
-  background: -webkit-linear-gradient(top, #fbfbfb, #e1e1e1);
+  ackground: -webkit-linear-gradient(top, #fbfbfb, #e1e1e1);
   background: -moz-linear-gradient(top, #fbfbfb, #e1e1e1);
   background: -o-linear-gradient(top, #fbfbfb, #e1e1e1);
   background: linear-gradient(top, #fbfbfb, #e1e1e1);
@@ -154,9 +136,7 @@
   zoom: 1;
   *display: inline;
   border: 1px solid #d4d4d4;
-  height: 32px;
-  line-height: 32px;
-  padding: 0px 25.6px;
+  height: 32px;x 25.6px;
   font-weight: 300;
   font-size: 14px;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
@@ -166,7 +146,7 @@
   text-decoration: none;
   text-align: center;
 }
-/* line 29, ../scss/buttons.scss */
+
 .button:hover {
   background-color: #eeeeee;
   color:#fff;
@@ -177,7 +157,7 @@
   background: -o-linear-gradient(top, #ffffff, #dcdcdc);
   background: linear-gradient(top, #ffffff, #dcdcdc);
 }
-/* line 33, ../scss/buttons.scss */
+
 .button:active {
   -webkit-box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.3), 0px 1px 0px white;
   -moz-box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.3), 0px 1px 0px white;
@@ -188,18 +168,18 @@
   text-decoration: none;
 }
 
-/* line 42, ../scss/buttons.scss */
+
 input.button, button.button {
   height: 34px;
   cursor: pointer;
 }
 
-/* line 48, ../scss/buttons.scss */
+
 .button-block {
   display: block;
 }
 
-/* line 57, ../scss/buttons.scss */
+
 .button.disabled,
 .button.disabled:hover,
 .button.disabled:active,
@@ -215,7 +195,7 @@ button.button:disabled {
   cursor: default;
 }
 
-/* line 67, ../scss/buttons.scss */
+
 .button-wrap {
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #e3e3e3), color-stop(100%, #f2f2f2));
   background: -webkit-linear-gradient(top, #e3e3e3, #f2f2f2);
@@ -234,7 +214,7 @@ button.button:disabled {
   display: inline-block;
 }
 
-/* line 83, ../scss/buttons.scss */
+
 .button-rounded {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -243,7 +223,7 @@ button.button:disabled {
   border-radius: 3px;
 }
 
-/* line 83, ../scss/buttons.scss */
+
 .button-pill {
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
@@ -252,7 +232,7 @@ button.button:disabled {
   border-radius: 50px;
 }
 
-/* line 83, ../scss/buttons.scss */
+
 .button-circle {
   -webkit-border-radius: 240px;
   -moz-border-radius: 240px;
@@ -262,15 +242,12 @@ button.button:disabled {
   -webkit-box-shadow: inset 0px 1px 1px rgba(255, 255, 255, 0.5), 0px 1px 2px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: inset 0px 1px 1px rgba(255, 255, 255, 0.5), 0px 1px 2px rgba(0, 0, 0, 0.2);
   box-shadow: inset 0px 1px 1px rgba(255, 255, 255, 0.5), 0px 1px 2px rgba(0, 0, 0, 0.2);
-  width: 120px;
-  line-height: 120px;
-  height: 120px;
+  width: 120px;0px;
   padding: 0px;
   border-width: 4px;
   font-size: 18px;
 }
 
-/* line 118, ../scss/buttons.scss */
 .button-primary {
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #00b5e5), color-stop(100%, #008db2));
   background: -webkit-linear-gradient(top, #00b5e5, #008db2);
@@ -282,7 +259,6 @@ button.button:disabled {
   color: white;
   text-shadow: 0 -1px 1px rgba(0, 40, 50, 0.35);
 }
-/* line 125, ../scss/buttons.scss */
 .button-primary:hover {
   background-color: #00a1cb;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #00c9fe), color-stop(100%, #008db2));
@@ -291,13 +267,11 @@ button.button:disabled {
   background: -o-linear-gradient(top, #00c9fe, #008db2);
   background: linear-gradient(top, #00c9fe, #008db2);
 }
-/* line 129, ../scss/buttons.scss */
 .button-primary:active {
   background: #1495b7;
   color: #005065;
 }
 
-/* line 118, ../scss/buttons.scss */
 .button-action {
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #8fcf00), color-stop(100%, #6b9c00));
   background: -webkit-linear-gradient(top, #8fcf00, #6b9c00);
@@ -309,7 +283,6 @@ button.button:disabled {
   color: white;
   text-shadow: 0 -1px 1px rgba(19, 28, 0, 0.35);
 }
-/* line 125, ../scss/buttons.scss */
 .button-action:hover {
   background-color: #7db500;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #a0e800), color-stop(100%, #6b9c00));
@@ -318,13 +291,11 @@ button.button:disabled {
   background: -o-linear-gradient(top, #a0e800, #6b9c00);
   background: linear-gradient(top, #a0e800, #6b9c00);
 }
-/* line 129, ../scss/buttons.scss */
 .button-action:active {
   background: #76a312;
   color: #374f00;
 }
 
-/* line 118, ../scss/buttons.scss */
 .button-highlight {
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #fa9915), color-stop(100%, #d87e04));
   background: -webkit-linear-gradient(top, #fa9915, #d87e04);
@@ -336,7 +307,6 @@ button.button:disabled {
   color: white;
   text-shadow: 0 -1px 1px rgba(91, 53, 2, 0.35);
 }
-/* line 125, ../scss/buttons.scss */
 .button-highlight:hover {
   background-color: #f18d05;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #fba42e), color-stop(100%, #d87e04));
@@ -345,13 +315,11 @@ button.button:disabled {
   background: -o-linear-gradient(top, #fba42e, #d87e04);
   background: linear-gradient(top, #fba42e, #d87e04);
 }
-/* line 129, ../scss/buttons.scss */
 .button-highlight:active {
   background: #d8891e;
   color: #8d5303;
 }
 
-/* line 118, ../scss/buttons.scss */
 .button-caution {
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #e8543f), color-stop(100%, #d9331a));
   background: -webkit-linear-gradient(top, #e8543f, #d9331a);
@@ -363,7 +331,6 @@ button.button:disabled {
   color: white;
   text-shadow: 0 -1px 1px rgba(103, 24, 13, 0.35);
 }
-/* line 125, ../scss/buttons.scss */
 .button-caution:hover {
   background-color: #e54028;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #eb6855), color-stop(100%, #d9331a));
@@ -372,13 +339,11 @@ button.button:disabled {
   background: -o-linear-gradient(top, #eb6855, #d9331a);
   background: linear-gradient(top, #eb6855, #d9331a);
 }
-/* line 129, ../scss/buttons.scss */
 .button-caution:active {
   background: #cd5240;
   color: #952312;
 }
 
-/* line 118, ../scss/buttons.scss */
 .button-royal {
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #99389f), color-stop(100%, #752a79));
   background: -webkit-linear-gradient(top, #99389f, #752a79);
@@ -390,7 +355,7 @@ button.button:disabled {
   color: white;
   text-shadow: 0 -1px 1px rgba(26, 9, 27, 0.35);
 }
-/* line 125, ../scss/buttons.scss */
+
 .button-royal:hover {
   background-color: #87318c;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ab3eb2), color-stop(100%, #752a79));
@@ -399,13 +364,12 @@ button.button:disabled {
   background: -o-linear-gradient(top, #ab3eb2, #752a79);
   background: linear-gradient(top, #ab3eb2, #752a79);
 }
-/* line 129, ../scss/buttons.scss */
 .button-royal:active {
   background: #764479;
   color: #3e1740;
 }
 
-/* line 143, ../scss/buttons.scss */
+
 .button-flat {
   -webkit-transition-property: background, color;
   -moz-transition-property: background, color;
@@ -422,23 +386,20 @@ button.button:disabled {
   border: none;
   text-shadow: none;
 }
-/* line 152, ../scss/buttons.scss */
+
 .button-flat:hover {
   background: #fbfbfb;
 }
-/* line 155, ../scss/buttons.scss */
 .button-flat:active {
   background: #eeeeee;
   color: #bbbbbb;
 }
-/* line 159, ../scss/buttons.scss */
 .button-flat.disabled {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
 }
 
-/* line 171, ../scss/buttons.scss */
 .button-flat-primary {
   -webkit-transition-property: background, color;
   -moz-transition-property: background, color;
@@ -456,23 +417,19 @@ button.button:disabled {
   text-shadow: none;
   border: none;
 }
-/* line 180, ../scss/buttons.scss */
 .button-flat-primary:hover {
   background: #00b5e5;
 }
-/* line 183, ../scss/buttons.scss */
 .button-flat-primary:active {
   background: #1495b7;
   color: #00647f;
 }
-/* line 187, ../scss/buttons.scss */
 .button-flat-primary.disabled {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
 }
 
-/* line 171, ../scss/buttons.scss */
 .button-flat-action {
   -webkit-transition-property: background, color;
   -moz-transition-property: background, color;
@@ -490,23 +447,19 @@ button.button:disabled {
   text-shadow: none;
   border: none;
 }
-/* line 180, ../scss/buttons.scss */
 .button-flat-action:hover {
   background: #8fcf00;
 }
-/* line 183, ../scss/buttons.scss */
 .button-flat-action:active {
   background: #76a312;
   color: #486900;
 }
-/* line 187, ../scss/buttons.scss */
 .button-flat-action.disabled {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
 }
 
-/* line 171, ../scss/buttons.scss */
 .button-flat-highlight {
   -webkit-transition-property: background, color;
   -moz-transition-property: background, color;
@@ -524,23 +477,19 @@ button.button:disabled {
   text-shadow: none;
   border: none;
 }
-/* line 180, ../scss/buttons.scss */
 .button-flat-highlight:hover {
   background: #fa9915;
 }
-/* line 183, ../scss/buttons.scss */
 .button-flat-highlight:active {
   background: #d8891e;
   color: #a66103;
 }
-/* line 187, ../scss/buttons.scss */
 .button-flat-highlight.disabled {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
 }
 
-/* line 171, ../scss/buttons.scss */
 .button-flat-caution {
   -webkit-transition-property: background, color;
   -moz-transition-property: background, color;
@@ -558,23 +507,19 @@ button.button:disabled {
   text-shadow: none;
   border: none;
 }
-/* line 180, ../scss/buttons.scss */
 .button-flat-caution:hover {
   background: #e8543f;
 }
-/* line 183, ../scss/buttons.scss */
 .button-flat-caution:active {
   background: #cd5240;
   color: #ac2815;
 }
-/* line 187, ../scss/buttons.scss */
 .button-flat-caution.disabled {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
 }
 
-/* line 171, ../scss/buttons.scss */
 .button-flat-royal {
   -webkit-transition-property: background, color;
   -moz-transition-property: background, color;
@@ -592,62 +537,46 @@ button.button:disabled {
   text-shadow: none;
   border: none;
 }
-/* line 180, ../scss/buttons.scss */
 .button-flat-royal:hover {
   background: #99389f;
 }
-/* line 183, ../scss/buttons.scss */
 .button-flat-royal:active {
   background: #764479;
   color: #501d53;
 }
-/* line 187, ../scss/buttons.scss */
 .button-flat-royal.disabled {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
 }
 
-/* line 202, ../scss/buttons.scss */
 .button-large {
   font-size: 19px;
-  height: 38.4px;
-  line-height: 38.4px;
-  padding: 0px 30.72px;
+  height: 38.4px;0px 30.72px;
 }
 
-/* line 227, ../scss/buttons.scss */
 input.button-large, button.button-large {
   height: 40.4px;
 }
 
-/* line 202, ../scss/buttons.scss */
 .button-small {
   font-size: 12px;
-  height: 25.6px;
-  line-height: 25.6px;
-  padding: 0px 20.48px;
+  height: 25.6px;0px 20.48px;
 }
 
-/* line 227, ../scss/buttons.scss */
 input.button-small, button.button-small {
   height: 27.6px;
 }
 
-/* line 202, ../scss/buttons.scss */
 .button-tiny {
   font-size: 11px;
-  height: 22.4px;
-  line-height: 22.4px;
-  padding: 0px 17.92px;
+  height: 22.4px;0px 17.92px;
 }
 
-/* line 227, ../scss/buttons.scss */
 input.button-tiny, button.button-tiny {
   height: 24.4px;
 }
 
-/* line 247, ../scss/buttons.scss */
 .button.glow {
   -webkit-animation-duration: 3s;
   -moz-animation-duration: 3s;
@@ -667,7 +596,6 @@ input.button-tiny, button.button-tiny {
   -o-animation-name: glowing;
   animation-name: glowing;
 }
-/* line 250, ../scss/buttons.scss */
 .button.glow:active {
   -webkit-animation-name: none;
   -moz-animation-name: none;
